2005-02-28  Mark McLoughlin  <markmc@redhat.com>

	i18nize the python code and construct paths
	with os.path.join()

	* lib/util.py:
	(init_gettext): add function to call gettext.install()
	
	* admin-tool/sabayon-apply.py,
	  admin-tool/sabayon-monitor.py,
	  admin-tool/sabayon-session.py,
	  admin-tool/sabayon.py: call util.init_gettext()
	
	* lib/Makefile.am: subst some more variables into
	config.py.
	
	* lib/config.py.in: add PACKAGE and use os.path.join()
	
	* admin-tool/monitorwindow.py,
	  admin-tool/profilesdialog.py,
	  lib/dirmonitor.py,
	  lib/protosession.py,
	  lib/sources/filessource.py,
	  lib/sources/gconfsource.py,
	  lib/sources/mozillasource.py,
	  lib/sources/paneldelegate.py,
	  lib/storage.py,
	  lib/unittests.py: i18nize and use os.path.join()

2005-02-28  Alexander Shopov  <ash@contact.bg>

	* configure.in: Added "bg" (Bulgarian) to ALL_LINGUAS

2005-02-25  Mark McLoughlin  <markmc@redhat.com>

	This commit breaks any existing profiles. The metadata
	format has changed.

	Also, the code in admin-tool still needs to be fixed
	up to made work with this stuff. All the unit tests
	pass, though.

	* lib/storage.py: substantially re-work to add revision
	history and make the API more useful.

	* lib/sources/filessource.py,
	  lib/sources/gconfsource.py,
	  lib/sources/mozillasource.py,
	  lib/sources/paneldelegate.py,
	  lib/sources/testsource.py,
	  lib/userprofile.py: Fixup to use the new ProfileStorage
	API.
	
	* lib/config.py.in: add .gconf.xml.defaults and
	.gconf.xml.mandatory to the list of dirs to ignore.
	
Tue Feb 22 03:10:20 CET 2005 William Lachance <wlach@nit.ca>

	* autogen.sh configure.ac: Properly check for xnest #168124
	
Mon Feb 21 11:48:20 CET 2005 Daniel Veillard <veillard@redhat.com>

	* doc/helping.html: one more Evince->Sabaon cleanup bug #168000

2005-02-20  Kostas Papadimas <pkst@gnome.org>

	* configure.ac: Add el (Greek) to ALL_LINGUAS

Sun Feb 20 00:47:20 CET 2005 Daniel Veillard <veillard@redhat.com>
