@@ -1,5 +1,10 @@
 2005-02-28  Mark McLoughlin  <markmc@redhat.com>
 
+	* admin-tool/monitorwindow.py:
+	(__handle_about): add translator credits.
+
+2005-02-28  Mark McLoughlin  <markmc@redhat.com>
+
 	i18nize the python code and construct paths
 	with os.path.join()
 
